--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "chart.js": "^4.4.4"
+    "chart.js": "^4.4.4",
+    "express": "^4.21.0"
   },
   "name": "desarrollo-integral",
   "version": "1.0.0",
