--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "chart.js": "^4.4.4",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "lodash": "^4.17.21"
   },
   "name": "desarrollo-integral",
   "version": "1.0.0",
